--- a/frontend-teaxis/package.json
+++ b/frontend-teaxis/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
@@ -26,6 +28,6 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
-    "vite": "^6.3.1"
+    "vite": "^6.4.1"
   }
 }
